<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/idBtnProdutos_main"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="4dp"
        android:onClick="irParaProdutos"
        android:text="@string/produtos_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnClientes_main"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:onClick="irParaClientes"
        android:text="@string/clientes_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnProdutos_main" />

    <Button
        android:id="@+id/idBtnFornecedores_main"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:onClick="irParaFornecedores"
        android:text="@string/fornecedores_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnClientes_main" />

</androidx.constraintlayout.widget.ConstraintLayout>