<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FornecedorActivity">

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="169dp"
      android:layout_marginEnd="170dp"
      android:text="@string/fornecedor"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
      android:id="@+id/idBtnAdd_fornecedor"
      android:layout_width="189dp"
      android:layout_height="50dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="1dp"
      android:backgroundTint="@color/purple_200"
      android:contentDescription="@string/stringAddFornecedor"
      android:onClick="telaCadastrarFornecedor"
      app:layout_constraintEnd_toStartOf="@+id/idBtnListar_fornecedor"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:srcCompat="@android:drawable/ic_input_add"
      app:tint="@color/purple_500"
      tools:ignore="ImageContrastCheck" />

  <ImageButton
      android:id="@+id/idBtnListar_fornecedor"
      android:layout_width="189dp"
      android:layout_height="50dp"
      android:layout_marginStart="1dp"
      android:layout_marginEnd="16dp"
      android:backgroundTint="@color/purple_200"
      android:contentDescription="@string/stringListarFornecedores"
      android:onClick="telaListarFornecedores"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/idBtnAdd_fornecedor"
      app:layout_constraintTop_toBottomOf="@+id/textView3"
      app:srcCompat="@android:drawable/ic_dialog_dialer"
      app:tint="@color/purple_500"
      tools:ignore="ImageContrastCheck" />

  <FrameLayout
      android:id="@+id/idFrame_fornecedor"
      android:layout_width="409dp"
      android:layout_height="660dp"
      android:layout_marginStart="1dp"
      android:layout_marginTop="1dp"
      android:layout_marginEnd="1dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/idBtnAdd_fornecedor">

  </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>