<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ClienteActivity">

    <ImageButton
        android:id="@+id/idBtnAdd_cliente"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/stringAddCliente"
        android:onClick="telaCadastrarCliente"
        app:layout_constraintEnd_toStartOf="@+id/idBtnListar_cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/purple_500"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginEnd="184dp"
        android:text="@string/cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/idBtnListar_cliente"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/stringListarClientes"
        android:onClick="telaListarClientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idBtnAdd_cliente"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_dialog_dialer"
        app:tint="@color/purple_500"
        tools:ignore="ImageContrastCheck" />

    <FrameLayout
        android:id="@+id/idFrame_cliente"
        android:layout_width="409dp"
        android:layout_height="660dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnAdd_cliente">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>