<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idTvProdutos_produto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProdutoActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:text="@string/produtos_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/idBtnListar_produto"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/stringListarProdutos"
        android:onClick="telaListarProdutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idBtnAdd_produto"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/ic_dialog_dialer"
        app:tint="@color/purple_500"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/idBtnAdd_produto"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/stringAddProduto"
        android:onClick="telaCadastrarProduto"
        app:layout_constraintEnd_toStartOf="@+id/idBtnListar_produto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/purple_500"
        tools:ignore="ImageContrastCheck" />

    <FrameLayout
        android:id="@+id/idFrame_produto"
        android:layout_width="match_parent"
        android:layout_height="657dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnListar_produto"/>
</androidx.constraintlayout.widget.ConstraintLayout>